Fixes minor spacing issues.

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@
 }
 
 .message {
-	width: 65%;
 	margin: auto;
 	font-weight: thin;
 	font-size: 16px;
